deployment/hunter/hunter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hunter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hunter
  template:
    metadata:
      labels:
        app: hunter
    spec:
      containers:
      - name: hunter
        image: us.gcr.io/ps5hunter/hunter:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: hunter-config
            mountPath: "/hunter/config"
            readOnly: true
      volumes:
        - name: hunter-config
          configMap:
            name: hunter-config
