deployment/hunter/hunter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hunter
  labels:
    app: hunter
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: hunter
  type: NodePort
  sessionAffinity: None
